--- a/chart/zipkin-collector/values.yaml
+++ b/chart/zipkin-collector/values.yaml
@@ -25,10 +25,10 @@ service:
 
 metrics:
   path: /prometheus
-  label: java-spring
+  label: zipkin-collector
 
 logs:
-  parser: java-spring
+  parser: zipkin-collector
 
 resources: 
   # We usually recommend not to specify default resources and to leave this as a conscious
