[FIX]change log parser to spring-boot

--- a/chart/zipkin-collector/values.yaml
+++ b/chart/zipkin-collector/values.yaml
@@ -25,10 +25,10 @@ service:
 
 metrics:
   path: /prometheus
-  label: zipkin-collector
+  label: spring-boot
 
 logs:
-  parser: zipkin-collector
+  parser: spring-boot
 
 resources: 
   # We usually recommend not to specify default resources and to leave this as a conscious
