--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM registry.cn-hangzhou.aliyuncs.com/choerodon-tools/javabase:0.6.0
 COPY app.jar /zipkin-collector.jar
-ENTRYPOINT [ "java", "-jar", "/zipkin-collector.jar" ]
+ENTRYPOINT exec java $JAVA_OPTS  -jar /zipkin-collector.jar
